--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>	
 	<script src="js/app.js"></script>
-	<title>FizzBuzz</title>
+	<title>FizzBuzz Part 2</title>
 </head>
 <body>
 </body>
